<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"

		 xsi:schemaLocation="
         http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<!-- PARENT -->
	<parent>

		<groupId>org.springframework.boot</groupId>

		<artifactId>spring-boot-starter-parent</artifactId>

		<version>3.3.5</version>

		<relativePath/>

	</parent>

	<!-- PROJETO -->
	<groupId>com.maria</groupId>

	<artifactId>padroes-projeto-spring</artifactId>

	<version>0.0.1-SNAPSHOT</version>

	<name>padroes-projeto-spring</name>

	<description>
		API REST utilizando Spring Boot, OpenFeign e Swagger
	</description>

	<!-- PROPERTIES -->
	<properties>

		<java.version>17</java.version>

		<project.build.sourceEncoding>
			UTF-8
		</project.build.sourceEncoding>

		<project.reporting.outputEncoding>
			UTF-8
		</project.reporting.outputEncoding>

		<spring-cloud.version>
			2023.0.3
		</spring-cloud.version>

		<jacoco.version>
			0.8.11
		</jacoco.version>

	</properties>

	<!-- DEPENDÊNCIAS -->
	<dependencies>

		<!-- WEB -->
		<dependency>
			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!-- JPA -->
		<dependency>
			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<!-- VALIDATION -->
		<dependency>
			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- OPENFEIGN -->
		<dependency>
			<groupId>org.springframework.cloud</groupId>

			<artifactId>spring-cloud-starter-openfeign</artifactId>
		</dependency>

		<!-- H2 -->
		<dependency>
			<groupId>com.h2database</groupId>

			<artifactId>h2</artifactId>

			<scope>runtime</scope>
		</dependency>

		<!-- SWAGGER -->
		<dependency>
			<groupId>org.springdoc</groupId>

			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>

			<version>2.6.0</version>
		</dependency>

		<!-- TESTES -->
		<dependency>
			<groupId>org.springframework.boot</groupId>

			<artifactId>spring-boot-starter-test</artifactId>

			<scope>test</scope>
		</dependency>

	</dependencies>

	<!-- SPRING CLOUD -->
	<dependencyManagement>

		<dependencies>

			<dependency>

				<groupId>org.springframework.cloud</groupId>

				<artifactId>spring-cloud-dependencies</artifactId>

				<version>${spring-cloud.version}</version>

				<type>pom</type>

				<scope>import</scope>

			</dependency>

		</dependencies>

	</dependencyManagement>

	<!-- BUILD -->
	<build>

		<plugins>

			<!-- SPRING BOOT -->
			<plugin>

				<groupId>org.springframework.boot</groupId>

				<artifactId>spring-boot-maven-plugin</artifactId>

			</plugin>

			<!-- COMPILER -->
			<plugin>

				<groupId>org.apache.maven.plugins</groupId>

				<artifactId>maven-compiler-plugin</artifactId>

				<configuration>

					<source>${java.version}</source>

					<target>${java.version}</target>

					<encoding>UTF-8</encoding>

				</configuration>

			</plugin>

			<!-- TESTES -->
			<plugin>

				<groupId>org.apache.maven.plugins</groupId>

				<artifactId>maven-surefire-plugin</artifactId>

				<version>3.2.5</version>

				<configuration>

					<argLine>
						-XX:+EnableDynamicAgentLoading
					</argLine>

				</configuration>

			</plugin>

			<!-- JACOCO -->
			<plugin>

				<groupId>org.jacoco</groupId>

				<artifactId>jacoco-maven-plugin</artifactId>

				<version>${jacoco.version}</version>

				<executions>

					<!-- AGENT -->
					<execution>

						<goals>
							<goal>prepare-agent</goal>
						</goals>

					</execution>

					<!-- REPORT -->
					<execution>

						<id>report</id>

						<phase>test</phase>

						<goals>
							<goal>report</goal>
						</goals>

					</execution>

				</executions>

			</plugin>

		</plugins>

	</build>

</project>